src/test/testFiles/invalid/semanticErrors/ifStatementsBranchesMustAllHaveReturns.manimdsl
fun get(x: number, stack: Stack<number>): number {
    if(x > 3) {
        stack.push(3);
    } else {
        return 4;
    }
}

let stack = new Stack<number>;
get(4, stack);